--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
         <title>inconfessio</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/addons/p5.dom.js"></script>
@@ -10,6 +10,6 @@
     </head>
 	<body style="background-color:black;">
         <div id="canvasForHTML"></div>
-        <textarea id="caixaDeTexto" name="caixaDeTexto" style="background-color:black; color: white; position:absolute; top: 15%; left:20%; width:60%; height:30vh"></textarea>
+        <textarea id="caixaDeTexto" name="caixaDeTexto" placeholder="confessio..."></textarea>
    </body>
 </html>
