--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <html>
+
     <head>
         <link rel="stylesheet" href="style.css">
         <title>inconfessio</title>
@@ -9,7 +10,17 @@
 		<script src="sketch.js"></script>
     </head>
 	<body style="background-color:black;">
+
+    <script src="https://unpkg.com/hydra-synth"></script>
+    <script>
+       // create a new hydra-synth instance
+       var hydra = new Hydra({ detectAudio: false })
+       osc(4, 0.1, 1.2).out()
+    </script>
+
         <div id="canvasForHTML"></div>
         <textarea id="caixaDeTexto" name="caixaDeTexto" placeholder="confessio..."></textarea>
    </body>
+
+
 </html>
